# CvAlgorithm

./: .gitignore  CMakeLists.txt.user.487b2ad  README.md
AdaBoost/: AdaBoost.py  CMakeLists.txt  CascadeClassifer.cpp  CascadeClassifer.h  FaceReader.py  Feature.cpp  Feature.h  FeatureManager.cpp  FeatureManager.h  HaarFeature.py  ImageReader.cpp  ImageReader.h  NonFaceReader.py  StrongClassifer.cpp  StrongClassifer.h  StrongClassifer.py  WeakClassifer.cpp  WeakClassifer.h  WeekClassifer.py  config.py  imagestorage.cpp  imagestorage.h  main.cpp  nonFaceDownload.py
AdaBoost/model/: cascade.xml  strong0.xml  strong1.xml  strong10.xml  strong2.xml  strong3.xml  strong4.xml  strong5.xml  strong6.xml  strong7.xml  strong8.xml  strong9.xml
Histogram_equalization/: CMakeLists.txt  main.cpp
Linear_filtering/: CMakeLists.txt  main.cpp
