cmake_minimum_required (VERSION 3.4.1)
project (Lfilter)
IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
set(OpenCV_DIR E:\\Projects\\cpp\\opencv\\build\\x64\\vc15\\lib)
ENDIF()
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
set(Caffe_Dir E:\\Projects\\cpp\\caffe)
set(Caffe_LIB ${Caffe_Dir}/lib/caffe.lib)
ELSE()
find_package(Caffe REQUIRED)
ENDIF()
include_directories(${Caffe_INCLUDE_DIRS})
ADD_EXECUTABLE(Lfilter main.cpp)
target_link_libraries(Lfilter ${OpenCV_LIBS})
